--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb+srv://swetapal101112:SBAyNwcYOW8rlgvN@student-progress.jljgul8.mongodb.net/?student-progress=true&w=majority&appName=student-progress
+MONGO_URI=mongodb+srv://...mongodb.net/student_progress?retryWrites=true&w=majority&appName=student-progress
 PORT=5000
 NODE_ENV=development
 EMAIL_USER=swetapal@gmail.com
